コンパイル成功。なぜかパラメータがNaNになる問題確認。要チェック(数値微分は大丈夫そう)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "vector": "cpp",
         "type_traits": "cpp",
         "csignal": "cpp",
-        "ctime": "cpp"
+        "ctime": "cpp",
+        "iostream": "cpp"
     }
 }
